# intltool

./: .bzrignore  .cvsignore  .gitignore  AUTHORS  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.in.in  NEWS  README  RELEASES  USED  autogen.sh  configure.ac  configure.in  intltool-extract.in  intltool-extract.in.in  intltool-merge.in  intltool-merge.in.in  intltool-po-Makefile.in.in-patch-3  intltool-po-Makefile.in.in-patch-5  intltool-prepare.in  intltool-unicodify.in  intltool-update.in  intltool-update.in.in  intltool.m4  intltool.spec.in  intltoolize.in  update.sh  xml-i18n-extract.in  xml-i18n-extract.in.in  xml-i18n-merge.in  xml-i18n-merge.in.in  xml-i18n-po-Makefile.in.in-patch-5  xml-i18n-prepare  xml-i18n-prepare.in  xml-i18n-prepare.in.in  xml-i18n-toolize.in  xml-i18n-tools.Makefile.patch  (+4 more)
doc/: .cvsignore  I18N-HOWTO  Makefile.am  intltool-extract.8  intltool-merge.8  intltool-prepare.8  intltoolize.8  xml-i18n-extract.8  xml-i18n-merge.8  xml-i18n-toolize.8
doc-i18n-tool/: .cvsignore  Makefile.am  doc-i18n-tool.c
modules/: Makefile.am
tests/: .cvsignore  Makefile.am  Makefile.in  selftest.pl  selftest.pl.in
tests/cases/: .cvsignore  Makefile.am  Makefile.in  az.po  extract-comments.xml  extract-qtdesigner.ui  extract13.desktop.in  fr.po  fr_BE.po  fr_FR.po  gsettings.gschema.xml  merge1.xml.in  merge6.po  merge6.xml.in  test.po  test.schemas.in
tests/results/: Makefile.am  Makefile.in  extract-comments.xml.h  extract-gtkbuilder.ui.h  extract-qtdesigner.ui.h  extract10.templates_.h  extract3.xml.in.h  extract7.xml.h  extract8.glade.h  gsettings.gschema.xml.h  merge1.xml  merge4.xml  merge5.sheet  merge5p.sheet  merge5u.sheet  merge6.xml  merge7.xml  test.schemas  test.schemas.in.h
