dnl Process this file with autoconf to create configure.

AC_INIT(intltoolize.in)

INTLTOOL_VERSION="0.9.6"

AM_INIT_AUTOMAKE(intltool, $INTLTOOL_VERSION)

pkgdatadir='${datadir}'"/${PACKAGE}"
AC_SUBST(pkgdatadir) dnl automake does not need this, but libtoolize does
aclocaldir='${datadir}'/aclocal
AC_SUBST(aclocaldir)

AC_PATH_PROG(PERL, perl)
if test -z "$PERL"; then
   AC_MSG_ERROR([perl not found])
fi
if test -z "`$PERL -v | fgrep '5.' 2> /dev/null`"; then
   AC_MSG_ERROR([perl 5.x required for intltool])
fi

AC_OUTPUT([
Makefile
tests/Makefile
tests/selftest.pl
tests/cases/Makefile
tests/results/Makefile
doc/Makefile
intltool-extract.in
intltool-merge.in
intltool.spec
intltoolize
xml-i18n-toolize
intltool-prepare
intltool-unicodify
intltool-update.in
])
