NULL = 

EXTRA_DIST =					\
	az.po					\
	extract1.desktop			\
	extract2.keyprop			\
	extract3.xml.in				\
	extract6.glade				\
	fr_BE.po				\
	fr_FR.po				\
	merge1.xml.in				\
	merge4.xml.in				\
	merge5p.sheet.in			\
	merge5u.sheet.in			\
	merge6.po				\
	merge6.xml.in				\
	test.po 				\
	$(NULL)
