NULL = 

EXTRA_DIST =					\
	az.po					\
	extract-comments.xml			\
	extract1.desktop			\
	extract10.templates_			\
	extract3.xml.in				\
	extract6.glade				\
	extract7.xml				\
	extract8.glade				\
	extract9.po				\
	extract9.xml.in				\
	fr.po					\
	fr_BE.po				\
	fr_FR.po				\
	merge1.xml.in				\
	merge10.templates_			\
	merge4.xml.in				\
	merge5p.sheet.in			\
	merge5u.sheet.in			\
	merge6.po				\
	merge6.xml.in				\
	merge7.xml.in				\
	merge8.keys.in				\
	schemasmerge1.po			\
	schemasmerge2.po			\
	test.po 				\
	test.schemas.in				\
	test.scm				\
	merge-cdata.xml.in			\
	$(NULL)
